// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WidgetTextUpdate displays text 1`] = `
<div
  className="WidgetTextUpdate-div-1"
>
  <WithStyles(Typography)
    className="WidgetTextUpdate-textUpdate100-3"
    noWrap={true}
  >
    Hello World
  </WithStyles(Typography)>
</div>
`;

exports[`WidgetTextUpdate displays with units 1`] = `
<div
  className="WidgetTextUpdate-div-1"
>
  <WithStyles(Typography)
    className="WidgetTextUpdate-textUpdate75-2"
    noWrap={true}
  >
    1.21
  </WithStyles(Typography)>
  <WithStyles(Typography)
    className="WidgetTextUpdate-unitBox-4"
    noWrap={true}
  >
    GW
  </WithStyles(Typography)>
</div>
`;
